--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,8 @@
     "express": "^4.17.1",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.4",
+    "nanoid": "^3.1.30",
+    "node-cache": "^5.1.2",
     "nodemon": "^2.0.15",
     "socket.io": "^4.4.0"
   }
