--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/app.js",
+  "main": "dist/src/app.js",
   "scripts": {
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
     "build": "tsc",
@@ -25,6 +25,7 @@
     "node-cache": "^5.1.2",
     "nodemon": "^2.0.15",
     "socket.io": "^4.4.0",
+    "ts-node": "^10.4.0",
     "tslint": "^6.1.3",
     "typescript": "^4.5.4"
   }
