--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -12,8 +13,10 @@
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
+    "redux-saga": "^1.1.3",
     "socket.io-client": "^4.4.0",
     "typescript": "^4.5.4",
     "web-vitals": "^1.0.1",
@@ -46,6 +49,8 @@
   "devDependencies": {
     "@craco/craco": "^6.3.0",
     "@types/react": "^17.0.38",
+    "@types/react-redux": "^7.1.22",
+    "@types/redux": "^3.6.0",
     "craco-alias": "^3.0.1",
     "sass": "^1.41.1"
   }
