--- a/client/package.json
+++ b/client/package.json
@@ -51,6 +51,7 @@
     "@types/react": "^17.0.38",
     "@types/react-redux": "^7.1.22",
     "@types/redux": "^3.6.0",
+    "@types/react-dom": "^17.0.2",
     "craco-alias": "^3.0.1",
     "sass": "^1.41.1"
   }
