--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
     "bootstrap": "^4.6.0",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
+    "primeicons": "^5.0.0",
+    "primereact": "^8.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
@@ -49,9 +51,9 @@
   "devDependencies": {
     "@craco/craco": "^6.3.0",
     "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.2",
     "@types/react-redux": "^7.1.22",
     "@types/redux": "^3.6.0",
-    "@types/react-dom": "^17.0.2",
     "craco-alias": "^3.0.1",
     "sass": "^1.41.1"
   }
